--- a/lol.html
+++ b/lol.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FNi3m7_exR8" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </body>
 </html>
